force-app/main/default/objects/Lost_Application_Config__mdt/Lost_Application_Config__mdt.object-meta.xml
<CustomObject>
    <label>Lost Application Config</label>
    <pluralLabel>Lost Applications Config</pluralLabel>
</CustomObject>