force-app/main/default/objects/Lost_Application_Config__mdt/fields/Description_Required__c.field-meta.xml
<CustomField>
    <fullName>Description_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Description Required</label>
    <type>Checkbox</type>
</CustomField>