force-app/main/default/objects/Lost_Application_Config__mdt/fields/Lost_Reason_Sub1__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Sub1__c</fullName>
    <label>Lost Reason Sub1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>